--- a/src/index.css
+++ b/src/index.css
@@ -66,8 +66,8 @@ html {
 
 body {
   background: var(--backgroundColor);
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 400;
   line-height: 1;
   color: var(--textColor);
@@ -146,6 +146,11 @@ ul {
   text-transform: capitalize;
   display: inline-block;
 }
+
+.btn.active {
+  background: var(--primary-700);
+}
+
 .btn:hover {
   background: var(--primary-700);
   box-shadow: var(--shadow-3);
